--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -51,7 +51,7 @@ header{
     & .hamberg{
       width: 70px;
       height: 70px;
-      background-image: url(/assets/image/hamburger-menu.png);
+      background-image: url(../image/hamburger-menu.png);
       position: relative;
       & span{
         display: block;
@@ -96,7 +96,7 @@ header{
   position: relative;
   width: 100vw;
   min-height: 260px;
-  background: url(/assets/image/mainVIsual_sp.jpg.png)no-repeat right center;
+  background: url(../image/mainVIsual_sp.jpg.png)no-repeat right center;
   background-size: contain;
   margin-bottom: 20px;
   & .catch{
@@ -370,7 +370,7 @@ header{
         font-weight: bold;
         padding: 12px 15px 28px;
         &::before{
-          content: url(/assets/image/arrow-right.png);
+          content: url(../image/arrow-right.png);
         }
         & span{
           color: #005bac;
@@ -515,7 +515,7 @@ footer {
   position: relative;
   width: 100vw;
   min-height: 651px;
-  background: url(/assets/image/mainVIsual_pc.jpg.png)center ;
+  background: url(../image/mainVIsual_pc.jpg.png)center ;
   background-size: cover;
   margin-bottom: 0;
   & #slide{
