--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -62,7 +62,6 @@ header .container .hamberg span {
   display: block;
   width: 30px;
   height: 5px;
-  border-radius: 2px;
   background-color: #fff;
   position: absolute;
   left: 50%;
@@ -70,13 +69,13 @@ header .container .hamberg span {
   transition: all 0.3s;
 }
 header .container .hamberg span:nth-child(1) {
-  top: 26%;
+  top: 30%;
 }
 header .container .hamberg span:nth-child(2) {
   top: 46%;
 }
 header .container .hamberg span:nth-child(3) {
-  top: 66%;
+  top: 61%;
 }
 header .container .hamberg.active span:nth-child(1) {
   top: 50%;
@@ -96,14 +95,14 @@ header .container .hamberg.active span:nth-child(3) {
   position: relative;
   width: 100vw;
   min-height: 260px;
-  background: url(../image/mainVIsual_sp.jpg.png) no-repeat right center;
+  background: url(../image/mainVIsual_sp.jpg.png) no-repeat right top;
   background-size: contain;
   margin-bottom: 20px;
 }
 .main_visual .catch {
   width: 175px;
   height: 181px;
-  padding: 7% 0 0 7%;
+  padding: 8% 0 0 7%;
 }
 .main_visual .catch .upper {
   width: 147px;
@@ -150,7 +149,7 @@ header .container .hamberg.active span:nth-child(3) {
 .main_visual #slide {
   width: 100vw;
   height: 280px;
-  padding: 10px 0;
+  padding: 10px 0 42px;
   background-color: #005bac;
   position: absolute;
   top: 0;
@@ -166,8 +165,8 @@ header .container .hamberg.active span:nth-child(3) {
   font-size: 18px;
   font-weight: bold;
   line-height: 1.4;
-  height: 50px;
-  line-height: 47px;
+  height: 62px;
+  line-height: 62px;
   border-bottom: #fff 1px solid;
 }
 .main_visual #slide li:last-child {
@@ -238,17 +237,18 @@ header .container .hamberg.active span:nth-child(3) {
 }
 #reason ul.container li {
   width: 100%;
+  margin-bottom: 35px;
 }
 #reason ul.container li figure img {
   margin: 0 auto;
   display: block;
   min-width: 343px;
   height: auto;
-  margin-bottom: 40px;
+  margin-bottom: 8px;
 }
 #reason ul.container li .coments {
   margin: 0 auto 15px;
-  padding-left: 5%;
+
 }
 #reason ul.container li .coments h3 {
   color: #f11f8d;
@@ -264,14 +264,15 @@ header .container .hamberg.active span:nth-child(3) {
 #reason ul.container li .coments h4 {
   font-size: 20px;
   font-weight: bold;
-  line-height: 1.8;
-  margin-bottom: 12px;
+  line-height: 1.6;
+  letter-spacing: -0.2px;
 }
 #reason ul.container li .coments p {
+  padding-top: 8px;
   font-size: 16px;
   font-weight: normal;
   line-height: 1.7;
-  letter-spacing: 0.2px;
+  letter-spacing: -0.2px;
 }
 
 .contact {
@@ -282,15 +283,16 @@ header .container .hamberg.active span:nth-child(3) {
 }
 .contact .box {
   padding: 40px 0;
-  width: 343px;
+  width: 340px;
   height: 133px;
   margin: 0 auto;
 }
 .contact .box p {
   box-sizing: border-box;
-  padding: 0 28px;
-  line-height: 1.75;
-  margin-bottom: 12px;
+  padding: 0 20px;
+  letter-spacing: 0.2px;
+  line-height: 1.5;
+  margin-bottom: 10px;
 }
 .contact .box .aplly a {
   display: inline-block;
@@ -346,6 +348,7 @@ header .container .hamberg.active span:nth-child(3) {
 }
 #course ul li figure {
   width: 343px;
+  height: 220px;
   text-align: center;
   margin: 0 auto;
   overflow: hidden;
@@ -364,7 +367,13 @@ header .container .hamberg.active span:nth-child(3) {
   padding: 12px 15px 28px;
 }
 #course ul li p::before {
-  content: url(../image/arrow-right.png);
+  content: "";
+  width:25px;
+  height: 20px;
+  display:inline-block;
+  background-image: url(../image/arrow-right.png);
+  background-size: contain;
+  vertical-align: middle;
 }
 #course ul li p span {
   color: #005bac;
@@ -393,8 +402,8 @@ header .container .hamberg.active span:nth-child(3) {
 #cost th {
   font-size: 16px;
   font-weight: normal;
-  width: 114px;
-  height: 63px;
+  width: 125px;
+  height: 62px;
 }
 #cost td {
   width: 237px;
@@ -412,9 +421,14 @@ header .container .hamberg.active span:nth-child(3) {
 .access ul li {
   margin: 0 auto;
   width: 390px;
-  height: auto;
+  height: 170px;
   position: relative;
   overflow: hidden;
+}
+.access ul li img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  height: 170px;
 }
 .access ul li .left img:hover {
   opacity: 0.6;
@@ -426,7 +440,7 @@ header .container .hamberg.active span:nth-child(3) {
 }
 .access ul li h3 {
   position: absolute;
-  top: 32%;
+  top: 45%;
   left: 10%;
   font-size: 22px;
   font-weight: bold;
@@ -449,6 +463,9 @@ footer {
     margin: 0 auto;
   }
   header {
+    background-color: #fff;
+    position: fixed;
+    top: 0;
     height: 101px;
     box-shadow: 0px 2px 8px 0px #9f9f9f;
     align-items: center;
@@ -457,19 +474,23 @@ footer {
     padding-top: 15px;
   }
   header .container h1 {
-    margin-left: 0;
+    margin-left: 1.5%;
+    margin-top: 1%;
     width: 241px;
   }
+  header .container h1 a img {
+    width: 100%;
+  }
   header .container .pc {
-    width: 57%;
+    width: 64.4%;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
   header .container .pc li a {
     color: #333;
-    letter-spacing: -1.1px;
-    font-size: 20px;
+    letter-spacing: -1px;
+    font-size: calc(0.9vw + 0.4rem);
     font-family: "Noto Sans JP", sans-serif;
     font-weight: normal;
   }
@@ -480,7 +501,7 @@ footer {
     display: block;
     background-image: linear-gradient(90deg, rgb(2, 113, 224), rgb(83, 162, 240));
     color: #fff;
-    border-radius: 30px;
+    border-radius: 35px;
     padding: 18px 40px;
   }
   header .container .pc li .btn:hover {
@@ -491,6 +512,7 @@ footer {
     display: none;
   }
   .main_visual {
+    margin-top: 101px;
     position: relative;
     width: 100vw;
     min-height: 651px;
@@ -504,7 +526,7 @@ footer {
   .main_visual .catch {
     width: 420px;
     height: 406px;
-    padding: 7% 0 0 7%;
+    padding: 7% 0 0 15%;
   }
   .main_visual .catch .upper {
     width: 325px;
@@ -584,18 +606,20 @@ footer {
     margin-bottom: 24px;
     background-color: #f11f8d;
     position: relative;
+    margin: 0 auto;
   }
   .select.container ul {
     position: absolute;
-    top: -87px;
+    top: -50px;
+    left:0;
+    right:0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
   }
   .select.container ul li {
-    margin-top: 36px;
-    margin-bottom: -37px;
-    padding-right: 40px;
+    margin: 1% 0;
+    padding-right: 38px;
   }
   .select.container ul li:last-child {
     padding-right: 0;
@@ -603,7 +627,7 @@ footer {
   .select.container ul li .btn {
     margin: 0 auto;
     display: block;
-    width: 345px;
+    width: 340px;
     height: 75px;
     line-height: 75px;
     border-radius: 36px;
@@ -622,7 +646,7 @@ footer {
     background-color: #3ac8ad;
   }
   #reason {
-    margin: 72px 0;
+    margin: 107px 0 55px;
   }
   #reason h2 {
     font-size: 36px;
@@ -632,12 +656,12 @@ footer {
     font-size: 54px;
   }
   #reason ul.container {
-    max-width: 1040px;
+    max-width: 1160px;
   }
   #reason ul.container li {
     display: flex;
     justify-content: space-between;
-    margin: 0 auto 48px;
+    margin: 0 auto 39px;
   }
   #reason ul.container li:nth-child(even) {
     flex-direction: row-reverse;
@@ -646,35 +670,36 @@ footer {
     margin: 0 auto;
   }
   #reason ul.container li figure img {
-    width: 85%;
+    width: 560px;
     display: block;
     max-width: 560px;
     height: auto;
     margin-bottom: 8px;
   }
   #reason ul.container li .coments {
-    width: 45%;
+    width: 47.5%;
     margin: 0 auto;
     padding-left: 0%;
     max-width: 580px;
   }
   #reason ul.container li .coments h3 {
     font-size: 28px;
-    line-height: 1.3;
+    line-height: 1.4;
   }
   #reason ul.container li .coments h3 span {
+    padding-left: 8px;
     font-size: 42px;
   }
   #reason ul.container li .coments h4 {
     font-size: 24px;
     line-height: 1.5;
-    margin-bottom: 12px;
+    margin-bottom: 14px;
   }
   #reason ul.container li .coments p {
     font-size: 16px;
     font-weight: normal;
-    line-height: 1.7;
-    letter-spacing: 0.2px;
+    line-height: 1.8;
+    letter-spacing: 0.1px;
   }
   .contact {
     width: 100%;
@@ -686,32 +711,36 @@ footer {
     padding: 40px 0;
     width: 400px;
     height: 133px;
-    margin: 0 auto 30px;
+    margin: 0 auto 20px;
   }
   .contact .box p {
     padding: 20px 0 0;
+    letter-spacing: -0.1px;
     line-height: 2.63;
-    margin-bottom: 16px;
+    margin-bottom: 10px;
   }
   .contact .box .aplly a {
     margin: 0 auto 60px;
     width: 360px;
     height: 72px;
     line-height: 72px;
+    letter-spacing: 0.2px;
     font-size: 24px;
     font-weight: bold;
     border-radius: 36px;
   }
   #course {
-    width: 80%;
+    width: 100%;
+    max-width: 1160px;
     margin: 72px auto 73px;
   }
   #course h2 {
     font-size: 36px;
-    margin: 64px 0 24px;
+    margin: 64px 0 30px;
   }
   #course .tab {
     justify-content: space-between;
+
   }
   #course .tab button {
     min-width: 48%;
@@ -723,7 +752,8 @@ footer {
     justify-content: space-around;
     flex-wrap: wrap;
     width: 100%;
-    padding-top: 32px;
+    max-width: 100%;
+    padding-top: 25px;
     background-color: #f2f9ff;
   }
   #course ul li:first-child {
@@ -731,12 +761,13 @@ footer {
   }
   #course ul li figure {
     width: 532px;
+    height: 329px;
     overflow: hidden;
     border-radius: 12px;
-    margin: 0 auto 16px;
+    margin: 0 auto 20px;
   }
   #course ul li p {
-    padding: 0 15px 40px;
+    padding: 0 0 34px 0px;
   }
   #cost {
     margin: 0 auto 64px;
@@ -744,17 +775,19 @@ footer {
   }
   #cost h2 {
     font-size: 36px;
-    margin: 72px 0 32px;
+    margin: 72px 0 26px;
   }
   #cost table {
     width: 600px;
   }
   #cost th {
+    border: 3px solid #ccc;
     font-size: 18px;
-    width: 141px;
-    height: 71px;
+    width: 142px;
+    height: 75px;
   }
   #cost td {
+    border: 3px solid #ccc;
     width: 452px;
     font-size: 32px;
     font-weight: bold;
@@ -773,6 +806,7 @@ footer {
     overflow: hidden;
   }
   .access ul li .left img {
+    width: 100%;
     transition: all 0.5s;
   }
   .access ul li .left img:hover {
@@ -780,6 +814,7 @@ footer {
     transform: scale(1.2);
   }
   .access ul li .right img {
+    width: 100%;
     transition: all 0.5s;
   }
   .access ul li .right img:hover {
@@ -796,8 +831,8 @@ footer {
     color: #fff;
   }
   footer {
-    height: 83px;
-    line-height: 83px;
+    height: 120px;
+    line-height: 120px;
     text-align: center;
     background-color: #dddddd;
     font-size: 13px;
