--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -36,6 +36,10 @@ header {
   box-shadow: 0px 2px 8px 0px #9f9f9f;
   position: relative;
   z-index: 10;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+
 }
 header .container {
   display: flex;
@@ -56,7 +60,8 @@ header .container .hamberg {
   width: 70px;
   height: 70px;
   background-image: url(../image/hamburger-menu.png);
-  position: relative;
+  position: absolute;
+  right: 0;
 }
 header .container .hamberg span {
   display: block;
@@ -90,8 +95,63 @@ header .container .hamberg.active span:nth-child(3) {
   transform: rotate(45deg);
   transform-origin: 38% -300%;
 }
+header .container #slide {
+  width: 100vw;
+  height: 280px;
+  padding: 10px 0 42px;
+  background-color: #005bac;
+  position: absolute;
+  top: 70px;
+  left: 0;
+  transition: all 0.5s;
+}
+header .container #slide.on {
+  left: 200%;
+}
+header .container #slide li {
+  width: 90%;
+  margin: 0 auto;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 1.4;
+  height: 63px;
+  line-height: 63px;
+  border-bottom: #fff 1px solid;
+}
+header .container #slide li:last-child {
+  border-bottom: none;
+}
+header .container #slide li a {
+  box-sizing: border-box;
+  display: block;
+  color: #fff;
+}
+header .container #slide li a::before {
+  content: "";
+  width:30px;
+  height: 15px;
+  display:inline-block;
+  background: url(../image/arrow-right-sp.png)no-repeat;
+  background-size: contain;
+  vertical-align: middle;
+}
+header .container #slide li a:last-child:before {
+  content: none;
+}
+header .container #slide li a.btn {
+  margin-top: 32px;
+  width: 350px;
+  height: 66px;
+  text-align: center;
+  line-height: 66px;
+  border-radius: 33px;
+  background-color: #fff;
+  color: #005bac;
+}
+
 
 .main_visual {
+  margin-top: 70px;
   position: relative;
   width: 100vw;
   min-height: 260px;
@@ -144,46 +204,6 @@ header .container .hamberg.active span:nth-child(3) {
 .main_visual .catch .lower h3 {
   font-size: 25px;
   font-weight: bold;
-  color: #005bac;
-}
-.main_visual #slide {
-  width: 100vw;
-  height: 280px;
-  padding: 10px 0 42px;
-  background-color: #005bac;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: all 0.5s;
-}
-.main_visual #slide.on {
-  left: 200%;
-}
-.main_visual #slide li {
-  width: 90%;
-  margin: 0 auto;
-  font-size: 18px;
-  font-weight: bold;
-  line-height: 1.4;
-  height: 62px;
-  line-height: 62px;
-  border-bottom: #fff 1px solid;
-}
-.main_visual #slide li:last-child {
-  border-bottom: none;
-}
-.main_visual #slide li a {
-  display: block;
-  color: #fff;
-}
-.main_visual #slide li a.btn {
-  margin-top: 32px;
-  width: 350px;
-  height: 66px;
-  text-align: center;
-  line-height: 66px;
-  border-radius: 33px;
-  background-color: #fff;
   color: #005bac;
 }
 
@@ -368,10 +388,10 @@ header .container .hamberg.active span:nth-child(3) {
 }
 #course ul li p::before {
   content: "";
-  width:25px;
-  height: 20px;
+  width:30px;
+  height: 15px;
   display:inline-block;
-  background-image: url(../image/arrow-right.png);
+  background: url(../image/arrow-right.png)no-repeat;
   background-size: contain;
   vertical-align: middle;
 }
@@ -392,18 +412,25 @@ header .container .hamberg.active span:nth-child(3) {
   width: 343px;
   margin: 0 auto;
   border-collapse: collapse;
+  border: 3px solid #ccc;
 }
 #cost tr:first-child {
   background-color: #f5f5f5;
 }
 #cost th, #cost td {
-  border: 3px solid #ccc;
+  border: 1px solid #ccc;
 }
 #cost th {
   font-size: 16px;
   font-weight: normal;
   width: 125px;
   height: 62px;
+}
+#cost th:first-child{
+  border-right:none;
+}
+#cost th:last-child{
+  border-left:none;
 }
 #cost td {
   width: 237px;
@@ -424,6 +451,12 @@ header .container .hamberg.active span:nth-child(3) {
   height: 170px;
   position: relative;
   overflow: hidden;
+}
+.access ul li .pc{
+  display:none;
+}
+.access ul li .sp{
+  display:block;
 }
 .access ul li img {
   -o-object-fit: cover;
@@ -610,7 +643,7 @@ footer {
   }
   .select.container ul {
     position: absolute;
-    top: -50px;
+    bottom: -50px;
     left:0;
     right:0;
     display: flex;
@@ -779,15 +812,22 @@ footer {
   }
   #cost table {
     width: 600px;
+    border: 3px solid #ccc;
+  }
+  #cost th:first-child{
+    border: 1px solid #ccc;
+  }
+  #cost th:last-child{
+    border: 1px solid #ccc;
   }
   #cost th {
-    border: 3px solid #ccc;
+    border: 1px solid #ccc;
     font-size: 18px;
     width: 142px;
     height: 75px;
   }
   #cost td {
-    border: 3px solid #ccc;
+    border: 1px solid #ccc;
     width: 452px;
     font-size: 32px;
     font-weight: bold;
@@ -805,8 +845,14 @@ footer {
     position: relative;
     overflow: hidden;
   }
+  .access ul li .sp{
+    display:none;
+  }
+  .access ul li .pc{
+    display:block;
+  }
   .access ul li .left img {
-    width: 100%;
+    height: auto;
     transition: all 0.5s;
   }
   .access ul li .left img:hover {
@@ -814,7 +860,7 @@ footer {
     transform: scale(1.2);
   }
   .access ul li .right img {
-    width: 100%;
+    height: auto;
     transition: all 0.5s;
   }
   .access ul li .right img:hover {
